[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29", "numpy>=1.19"]
build-backend = "setuptools.build_meta"

[project]
name = "pylevelator"
version = "1.1.0"
description = "现代化的 Python 音频均衡工具 - 比原版 Levelator 快 40%"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "KakaruHayate"}
]
keywords = ["audio", "levelator", "audio-processing", "audio-normalization", "cython"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.19.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "cython>=0.29.0",
    "pytest>=6.0",
    "build>=0.7.0",
    "twine>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/KakaruHayate/pylevelator"
"Bug Tracker" = "https://github.com/KakaruHayate/pylevelator/issues"
"Source Code" = "https://github.com/KakaruHayate/pylevelator"
