[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29", "numpy>=1.19"]
build-backend = "setuptools.build_meta"

[project]
name = "pylevelator"
version = "1.1.0"
description = "Modern Python audio leveling tool — 40% faster than the original Levelator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "KakaruHayate"}
]
keywords = [
    "audio",
    "levelator",
    "audio-processing",
    "audio-normalization",
    "audio-leveling",
    "cython",
    "openmp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Cython",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "numpy>=1.19.0",
    "soundfile>=0.12.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "cython>=0.29.0",
    "pytest>=6.0",
    "build>=0.7.0",
    "twine>=3.4.0",
]

[project.scripts]
pylvl = "pylevelator.cli:main"
pylevelator = "pylevelator.cli:main"

[project.urls]
Homepage = "https://github.com/KakaruHayate/pylevelator"
"Bug Tracker" = "https://github.com/KakaruHayate/pylevelator/issues"
"Source Code" = "https://github.com/KakaruHayate/pylevelator"
Documentation = "https://github.com/KakaruHayate/pylevelator#readme"
